<resources>
    <string name="app_name" translatable="false">ChallengeOne1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="name_of_shopping_list">NAME OF SHOPPING LIST</string>
    <string name="choose_a_color">CHOOSE A COLOR</string>
    <string name="save">SAVE</string>
    <string name="click_on_icon_to_change">CLICK ON ICON TO CHANGE</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sort_alphabetical">Sort alphabetical</string>
    <string name="sort_by_count">Sort by count</string>
    <string name="things_to_get">Things to get</string>
    <string name="already_bought_things">Already bought things</string>
    <string name="your_article">YOUR ARTICLE</string>
    <string name="cancel">CANCEL</string>
    <string name="shopping_list">SHOPPING LIST</string>
    <string name="update">UPDATE</string>
    <string name="edit_list">EDIT LIST</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="create_a_new_list">Create a new List</string>
    <string name="are_you_sure">Are you sure? </string>
    <string name="fill_up_name">Please Fill up the Shopping list name!</string>
    <string name="is_saved">is saved</string>
    <string name="todo">todo</string>

    <string-array name="delete_and_edit">
        <item>Edit</item>
        <item>Delete</item>

    </string-array>
</resources>