<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CreateShoppingListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title_new_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_of_shopping_list" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/purple_200"
        app:cardCornerRadius="20sp"
        app:layout_constraintTop_toBottomOf="@id/tl_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tl_title">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_icon_new_category"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_fitness_center_24"
                />

            <TextView
                android:id="@+id/tv_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_on_icon_to_change"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_icon_new_category" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_choose_color_new_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/choose_a_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_describe" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/cv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="10dp"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/cv" />

    <TextView
        android:id="@+id/tvuuid"
        app:layout_constraintTop_toBottomOf="@id/btn_save_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>