<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ArticleFragment">

    <TextView
        android:id="@+id/tv_title_not_bought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/things_to_get"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/sv_not_bought_article_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_title_bought"
        app:layout_constraintTop_toBottomOf="@id/tv_title_not_bought">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_not_bought_article_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


    <TextView
        android:id="@+id/tv_title_bought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/already_bought_things"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_bought_article_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/fb_article_fragment"
        app:layout_constraintTop_toBottomOf="@id/tv_title_bought">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_article_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>